--- a/catalog/templates/catalog/author_confirm_delete.html
+++ b/catalog/templates/catalog/author_confirm_delete.html
@@ -8,7 +8,7 @@
 
 <form action="" method="POST">
   {% csrf_token %}
-  <input type="submit" value="Да, он нудный">
+  <input type="submit" value="Да, удалить">
 </form>
 
 {% endblock %}
