--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -12,12 +12,13 @@
 <dl>
 {% for book in author.book_set.all %}
   <dt><a href="{% url 'book-detail' book.pk %}">{{book}}</a> ({{book.bookinstance_set.all.count}})</dt>
-  <dd>{{book.summary}}</dd>
+  <br>
+  <a>Действий с книгой</a><dd>{{book.summary}}</dd>
 {% endfor %}
 </dl>
  {% if user.is_authenticated %} 
-<a href="{% url 'author_update' author.pk%}">Обновить информацио об авторе</a>
-<br><a href="{% url 'author_delete' author.pk%}">Удалить негодного автора</a></br>
+<a href="{% url 'author_update' author.pk%}">Изменить информацио об авторе</a>
+<br><a href="{% url 'author_delete' author.pk%}">Удалить автора</a></br>
 {% endif %} 
 </div>
 {% endblock %}
