--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -11,9 +11,9 @@
 
 <dl>
 {% for book in author.book_set.all %}
-  <dt><a href="{% url 'book-detail' book.pk %}">{{book}}</a> ({{book.bookinstance_set.all.count}})</dt>
+  <dt><a href="{% url 'book-detail' book.pk %}">{{book}}</a> <a>Действий с книгой</a> ({{book.bookinstance_set.all.count}})</dt>
   <br>
-  <a>Действий с книгой</a><dd>{{book.summary}}</dd>
+  <dd>{{book.summary}}</dd>
 {% endfor %}
 </dl>
  {% if user.is_authenticated %} 
