--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -11,8 +11,7 @@
 
 <dl>
 {% for book in author.book_set.all %}
-  <dt><a href="{% url 'book-detail' book.pk %}">{{book}}</a> <a>Действий с книгой</a> ({{book.bookinstance_set.all.count}})</dt>
-  <br>
+  <dt><a href="{% url 'book-detail' book.pk %}">{{book}}</a> ({{book.bookinstance_set.all.count}})</dt>
   <dd>{{book.summary}}</dd>
 {% endfor %}
  {% if user.is_authenticated %} 
