--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -6,11 +6,10 @@
   <p><strong>Автор:</strong><a href="{% url 'author-detail' book.author.pk %}">{{ book.author }}</a></p>
   <p><strong>Резюме:</strong> {{ book.summary }}</p>
   <p><strong>ISBN:</strong> {{ book.isbn }}</p> 
-  <p><strong>Язык:</strong> {{ book.language }}</p>  
   <p><strong>Жанр:</strong> {{ book.genre.all|join:", " }}</p>  
 
   <div style="margin-left:20px;margin-top:20px">
-    <h4>Copies</h4>
+    <h4>Копии</h4>
 
     {% for copy in book.bookinstance_set.all %}
       <hr>
@@ -20,12 +19,12 @@
       {% if copy.status != 'a' %}
         <p><strong>Должен быть возвращен:</strong> {{ copy.due_back }}</p>
       {% endif %}
-      <p><strong>выходные данные:</strong> {{ copy.imprint }}</p>
+      <p><strong>Комментарий:</strong> {{ copy.imprint }}</p>
       <p class="text-muted"><strong>Id:</strong> {{ copy.id }}</p>
     {% endfor %}
   </div>
  {% if user.is_authenticated %} 
-  <a href="{% url 'book_update' book.pk%}">Обновить информацио об книге</a>
-  <br><a href="{% url 'book_delete' book.pk%}">Убрать книжку с полки</a></br>
+  <a href="{% url 'book_update' book.pk%}">Обновить информацио о книге</a>
+  <br><a href="{% url 'book_delete' book.pk%}">Убрать книгу</a></br>
 {% endif %}
 {% endblock %}
