--- a/catalog/templates/catalog/book_list.html
+++ b/catalog/templates/catalog/book_list.html
@@ -14,6 +14,6 @@
     <p>В библиотеке нет книг</p>
   {% endif %}
   {% if user.is_authenticated %} 
-    <a href="{% url 'book_create' %}">Добавить книжку на полку</a>
+    <a href="{% url 'book_create' %}">Добавить книгу</a>
   {% endif %}     
 {% endblock %}
