--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %} 
   <h1> Домашняя страница библиотеки </h1> 
-  <p> Добро пожаловать в WEB-библиотеку! </p> 
+  <p> Добро пожаловать в библиотеку! </p> 
   <p> Библиотека имеет следующее количество записей: </p> 
   <ul> 
     <li> <strong> Книги: </strong> {{num_books}} </li> 
@@ -12,5 +12,5 @@
     <li> <strong> Жанров : </strong>{{num_gern}} </li>
 
   </ul> 
-  <p>Вы были на главной странице {{ num_visits }}{% if num_visits == 1 %} time{% else %} раз {% endif %}.</p>
+  
 {% endblock %}
